--- a/projets.html
+++ b/projets.html
@@ -117,6 +117,17 @@
                 </div>
             </div>
 
+            <div class="project-item flip-container">
+                <div class="flipper">
+                    <div class="front">
+                        <img src="img/bières2.jpg" alt="Projet Gambrinus">
+                    </div>
+                    <div class="back">
+                        <p>Dans le cadre d'une SAE, nous avons dû trouver un commanditaire et lui produire des contenus pour une communication multimédia.<br><br><a href="https://drive.google.com/drive/folders/13s2i8OJJJ_FwXpVsDnG-eeiEX3UEKBHe?usp=drive_link">Voir le Drive</a></p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         </section>    
