--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         </div>
 
-           <p class="plus"><a class="aplus" href="file:///Users/arthurcarre/Desktop/Portfolio/projets.html">Voir plus</a></p>
+           <p class="plus"><a class="aplus" href="projets.html">Voir plus</a></p>
 
         </section>  
         
