--- a/projets.html
+++ b/projets.html
@@ -120,7 +120,7 @@
             <div class="project-item flip-container">
                 <div class="flipper">
                     <div class="front">
-                        <img src="img/bières2.jpg" alt="Projet Gambrinus">
+                        <img src="img/Portfolio/bières2.jpg" alt="Projet Gambrinus">
                     </div>
                     <div class="back">
                         <p>Dans le cadre d'une SAE, nous avons dû trouver un commanditaire et lui produire des contenus pour une communication multimédia.<br><br><a href="https://drive.google.com/drive/folders/13s2i8OJJJ_FwXpVsDnG-eeiEX3UEKBHe?usp=drive_link">Voir le Drive</a></p>
