ajout section portfolio

--- a/projets.html
+++ b/projets.html
@@ -128,6 +128,18 @@
                 </div>
             </div>
 
+            <div class="project-item flip-container">
+                <div class="flipper">
+                    <div class="front">
+                        <img src="img/Portfolio/maquette bypauline.png" alt="Maquette bypauline">
+                    </div>
+                    <div class="back">
+                        <p>Pour m'entraîner, j'ai réalisé ce prototype pour un futur site de couture</p><br><br><a href="https://youtu.be/2ZTDeXabmK0">Voir la vidéo</a></p>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
         </section>    
