--- a/projets.html
+++ b/projets.html
@@ -134,7 +134,7 @@
                         <img src="img/Portfolio/maquette bypauline.png" alt="Maquette bypauline">
                     </div>
                     <div class="back">
-                        <p>Pour m'entraîner, j'ai réalisé ce prototype pour un futur site de couture</p><br><br><a href="https://youtu.be/2ZTDeXabmK0">Voir la vidéo</a></p>
+                        <p>Pour m'entraîner, j'ai réalisé ce prototype pour un futur site de couture</p><br><br><a href="https://youtu.be/2ZTDeXabmK0"><br><br>Voir la vidéo</a></p>
                     </div>
                 </div>
             </div>
