--- a/projets.html
+++ b/projets.html
@@ -79,7 +79,7 @@
                         <img src="img/Portfolio/maquette.png" alt="Projet seo">
                     </div>
                     <div class="back">
-                        <p>Conception d'une maquette Figma pour un site de SEO, réalisée en suivant le tutoriel de la chaîne YouTube Phidias Académie.<br><br><a href="img/Portfolio/maquette.pdf" download>Télécharger le fichier PDF</a></p>
+                        <p>Conception d'une maquette Figma pour un site de SEO, réalisée en suivant le tutoriel de la chaîne YouTube Phidias Académie.<br><br><a href="img/Portfolio/maquette.pdf">Télécharger le fichier PDF</a></p>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <img src="img/Portfolio/maquette bypauline.png" alt="Maquette bypauline">
                     </div>
                     <div class="back">
-                        <p>Pour m'entraîner, j'ai réalisé ce prototype pour un futur site de couture<br><br><a href="https://youtu.be/2ZTDeXabmK0"><br><br>Voir la vidéo</a></p>
+                        <p>Pour m'entraîner, j'ai réalisé ce prototype pour un futur site de couture.<br><br><a href="https://youtu.be/2ZTDeXabmK0"><br><br>Voir la vidéo</a></p>
                     </div>
                 </div>
             </div>
