--- a/projets.html
+++ b/projets.html
@@ -79,7 +79,7 @@
                         <img src="img/Portfolio/maquette.png" alt="Projet seo">
                     </div>
                     <div class="back">
-                        <p>Conception d'une maquette Figma pour un site de SEO, réalisée en suivant le tutoriel de la chaîne YouTube Phidias Académie.<br><br><a href="img/Portfolio/maquette.pdf">Télécharger le fichier PDF</a></p>
+                        <p>Conception d'une maquette Figma pour un site de SEO, réalisée en suivant le tutoriel de la chaîne YouTube Phidias Académie.<br><br><a href="img/Portfolio/maquette.pdf" target="_blank">Voir la maquette</a></p>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <img src="img/Portfolio/maquette2.png" alt="Projet portfolio">
                     </div>
                     <div class="back">
-                        <p>Intégration de la maquette dans mon portfolio pour la création de mon site web. Ce projet visait à concevoir une interface claire et intuitive, mettant en valeur mes compétences en design et en développement, tout en offrant une navigation fluide et professionnelle pour présenter mes projets.<br><br><a href="img/Portfolio/maquette2.pdf" download>Télécharger le fichier PDF</a></p>
+                        <p>Intégration de la maquette dans mon portfolio pour la création de mon site web. Ce projet visait à concevoir une interface claire et intuitive, mettant en valeur mes compétences en design et en développement, tout en offrant une navigation fluide et professionnelle pour présenter mes projets.<br><br><a href="img/Portfolio/maquette2.pdf" target="_blank">Voir la maquette</a></p>
                     </div>
                 </div>
             </div>
