--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <h1>À propos de <span>moi !</span></h1>
 
           <h2><span>Bonjour !</span></h2>
-          <p>Je m'apelle Arthur Carré, j'ai 20 ans et je suis actuellement étudiant<br> en  BUT Métiers du multimédia et de l’internet<br> à l’iut de Lens.</p>
+          <p>Je m'apelle Arthur Carré, j'ai 20 ans et je suis actuellement étudiant en  BUT Métiers du multimédia et de l’internet<br> à l’iut de Lens.</p>
 
         </div>
         
